--- a/MarvelX/Base.lproj/Main.storyboard
+++ b/MarvelX/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lkw-4S-6Jl">
+                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lkw-4S-6Jl">
                                             <rect key="frame" x="40" y="68" width="220" height="240"/>
                                             <gestureRecognizers/>
                                             <constraints>
@@ -214,7 +214,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="55" height="70"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bWn-mi-3D6">
+                                                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bWn-mi-3D6">
                                                                 <rect key="frame" x="0.0" y="0.0" width="55" height="70"/>
                                                             </imageView>
                                                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="gc5-bE-5L6">
@@ -241,6 +241,7 @@
                                     </subviews>
                                 </view>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.34819135270684931" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="rG2-sS-Hnt" firstAttribute="top" secondItem="Vld-0Z-K0X" secondAttribute="bottom" constant="5" id="4DX-ZH-iwm"/>
                                     <constraint firstItem="rG2-sS-Hnt" firstAttribute="leading" secondItem="r1D-AS-yoW" secondAttribute="leadingMargin" constant="5" id="7gq-5Z-84y"/>
@@ -274,6 +275,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="est-cj-gYh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2016.8" y="34.632683658170919"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="IVT-Iq-k8u">
+            <objects>
+                <viewController storyboardIdentifier="imageViewController" modalPresentationStyle="overCurrentContext" id="5XG-jf-ti0" customClass="ImageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CkB-eV-fJ6"/>
+                        <viewControllerLayoutGuide type="bottom" id="iQj-y3-VuS"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" contentMode="scaleAspectFit" id="v6q-qR-dCt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ivp-QO-lsm">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="ivp-QO-lsm" secondAttribute="trailing" id="4IF-Zf-wjX"/>
+                            <constraint firstItem="iQj-y3-VuS" firstAttribute="top" secondItem="ivp-QO-lsm" secondAttribute="bottom" id="8k5-53-s1q"/>
+                            <constraint firstItem="ivp-QO-lsm" firstAttribute="top" secondItem="CkB-eV-fJ6" secondAttribute="bottom" id="F0J-hm-Ql0"/>
+                            <constraint firstItem="ivp-QO-lsm" firstAttribute="leading" secondItem="v6q-qR-dCt" secondAttribute="leadingMargin" id="dqd-H9-17S"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="ivp-QO-lsm" id="jwl-vB-t4t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GXq-pi-vmO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2745" y="35"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZCx-Kz-CH3">
